2013-01-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix non-Mule mode by not inserting wbr at the end of line.

	* src/wordseg.cpp (main):
	  - Print stopstr instead of wbr in !wholeLine case.

2012-06-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	More safety on checking RTFToken emptiness.

	* src/filterrtf.cpp (class RTFToken):
	  - Add isEmpty() method for checking emptiness.
	  - Also initialize val[] string on reset(), as some code did check
	    its emptiness by peeking this string.
	* src/filterrtf.cpp (FilterRTF::chgCharState):
	  - Check rtfToken emptiness with the new isEmpty() method.

2012-06-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix buffer overflow bug caused by some RTF docs.

	* src/filterrtf.h (class FilterRTF):
	  - Allocate more space for strbuff[] member. 5 was too few when
	    facing non-Thai characters like '\u65533' (plus its skip bytes).
	    The safe value is 37, for U+7FFFFFFF.

2012-06-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/filterrtf.cpp (FilterRTF::GetNextToken):
	  - Remove misleading comment.
	  - Make if-condition more concise.

2012-06-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix memleak.

	* src/convutil.cpp (ConvPrint):
	  - Delete allocated TextWriter object before exit.

2012-06-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/worddef.h (isPunc):
	  - Drop unused and meaningless function.

2012-06-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Handle CR (80..A0) non-Thai chars in RTF

	* src/worddef.h (isThai, tis2uni):
	  - Check for Thai more accurately (c > 0xa0, not just c & 0x80).
	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	  - wbr in unicode mode should be escaped, now that UTF-8 interception
	    technique has gone.
	* src/filterrtf.cpp (FilterRTF::GetNextToken):
	  - Distinguish non-Thai in ANSI data bytes.
	* src/filterrtf.cpp (FilterRTF::Print):
	  - Also escape 80..A0 non-Thai chars.